# soseki

./: .gitignore  Dockerfile  README.md  build_passage_db.py  build_passage_embeddings.py  convert_models_to_onnx.py  demo.py  evaluate_reader.py  evaluate_retriever.py  requirements.txt  setup.cfg  train_biencoder.py  train_reader.py
.streamlit/: config.toml
soseki/biencoder/: modeling.py  tokenization.py
soseki/end_to_end/: modeling.py  onnx_modeling.py
soseki/passage_db/: in_memory_passage_db.py  lmdb_passage_db.py
soseki/reader/: modeling.py  tokenization.py
soseki/retriever/: binary_retriever.py  dense_retriever.py
soseki/utils/: data_utils.py
