[metadata]
name = soseki
version = 0.0.1
description = Open domain QA system by Studio Ousia
author = Studio Ousia
url = https://github.com/studio-ousia/soseki
license = Creative Commons Attribution-NonCommercial 4.0 International License

[options]
packages = soseki
install_requires =
    faiss-cpu
    lmdb
    onnxruntime
    pytorch-lightning == 1.4.9
    regex
    streamlit
    torch == 1.10.1
    tqdm
    transformers == 4.15.0
