[metadata]
name = soseki
version = 0.0.1
description = Open domain QA system by Studio Ousia
author = Studio Ousia
url = https://github.com/studio-ousia/soseki
license = Creative Commons Attribution-NonCommercial 4.0 International License

[options]
packages = soseki
install_requires =
    faiss-cpu
    lmdb
    onnxruntime
    pytorch-lightning
    regex
    streamlit
    torch
    tqdm
    transformers
